add sign in with google (check for the graphics)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">enjoyBook</string>
+    <string name="web_client_id">593084232172-fag3l40r5oeugov6a59m4arsukdhpmj2.apps.googleusercontent.com</string>
 </resources>
